src/objects/ChatterStar__c.object
<CustomObject>
    <fields>
        <fullName>fiId__c</fullName>
        <label>fiId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentId__c</fullName>
        <label>parentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postDate__c</fullName>
        <label>postDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rating__c</fullName>
        <label>rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Chatter Star</label>
    <nameField>
        <label>Chatter Star Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Stars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>